# mSnip

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: lint.yml
src/: App.tsx  index.css  snip.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
